<resources>
    <string name="app_name">Amazon</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="amazon_icon">amazon icon</string>
    <string name="amazon_password">Amazon Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="sign_up_here">Sign Up here!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">search</string>
    <string name="camera_preview">camera preview</string>
</resources>
